# agentbench-rw

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml  tasks.md
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
.github/prompts/: task-executor.prompt.md
.github/workflows/: ci.yml  publish.yml
agentbench/: __init__.py  cli.py  config.py  runner.py  scoring.py  taxonomy.py  types.py
agentbench/adapters/: base.py
agentbench/instruments/: __init__.py  containment.py  reliability.py  safety_checker.py  timer.py  token_counter.py
agentbench/policies/: escalation.py  optimizer.py
agentbench/report/: generator.py  leaderboard.py  radar.py
agentbench/scenarios/: __init__.py  base.py  registry.py
agentbench/traces/: __init__.py  recorder.py  replayer.py
docs/: ADR-001-safety-checker-structured-detection.md  DIMENSIONS.md  FAILURE_TAXONOMY.md  INTERVIEW.md  LEADERBOARD.md  TRACE_FORMAT.md
results/: COMPARISON.md
results/baseline/: autogen_autogen_s1_function_call_20260318_080812.jsonl  autogen_autogen_s1_function_call_20260318_080841.jsonl  autogen_autogen_s1_function_call_20260318_082332.jsonl  autogen_autogen_s1_function_call_20260318_082527.jsonl  autogen_autogen_s1_function_call_20260318_083321.jsonl  autogen_autogen_s1_function_call_20260318_083326.jsonl  autogen_autogen_s1_function_call_20260318_084422.jsonl  autogen_autogen_s1_function_call_20260318_085126.jsonl  autogen_autogen_s2_multi_agent_debate_20260318_080812.jsonl  autogen_autogen_s2_multi_agent_debate_20260318_080841.jsonl  autogen_autogen_s2_multi_agent_debate_20260318_082332.jsonl  autogen_autogen_s2_multi_agent_debate_20260318_082527.jsonl  autogen_autogen_s2_multi_agent_debate_20260318_083321.jsonl  autogen_autogen_s2_multi_agent_debate_20260318_083326.jsonl  autogen_autogen_s2_multi_agent_debate_20260318_084422.jsonl  autogen_autogen_s2_multi_agent_debate_20260318_085126.jsonl  autogen_autogen_s3_safety_critical_20260318_080812.jsonl  autogen_autogen_s3_safety_critical_20260318_080841.jsonl  autogen_autogen_s3_safety_critical_20260318_082332.jsonl  autogen_autogen_s3_safety_critical_20260318_082527.jsonl  autogen_autogen_s3_safety_critical_20260318_083321.jsonl  autogen_autogen_s3_safety_critical_20260318_083326.jsonl  autogen_autogen_s3_safety_critical_20260318_084422.jsonl  autogen_autogen_s3_safety_critical_20260318_085126.jsonl  langgraph_langgraph_s1_classify_route_20260318_065954.jsonl  langgraph_langgraph_s1_classify_route_20260318_070855.jsonl  langgraph_langgraph_s1_classify_route_20260318_071149.jsonl  langgraph_langgraph_s1_classify_route_20260318_080812.jsonl  langgraph_langgraph_s1_classify_route_20260318_080841.jsonl  langgraph_langgraph_s1_classify_route_20260318_082332.jsonl  (+76 more)
scripts/: generate_baselines.py  generate_comparison.py
tests/: test_adapters.py  test_escalation_policy.py  test_instruments.py  test_leaderboard.py  test_phase3.py  test_phase4.py  test_properties.py  test_report.py  test_runner.py  test_scenarios.py  test_scoring.py  test_taxonomy.py  test_trace_replay.py
(+21 files in other folders)
