[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbench-rw"
version = "0.1.0"
description = "Real-World Agent Evaluation Framework — 7 dimensions, multi-target, trace-replay"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Mick Gährken" }]
keywords = ["agent", "evaluation", "benchmark", "llm", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
agentbench = "agentbench.cli:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["agentbench"]
