[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbench-rw"
version = "0.2.0"
description = "Real-World Agent Evaluation Framework — 7 dimensions, multi-target, trace-replay"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Mick Gährken" }]
keywords = ["agent", "evaluation", "benchmark", "llm", "safety", "containment", "leaderboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/sauremilk/agentbench-rw"
Documentation = "https://github.com/sauremilk/agentbench-rw/tree/main/docs"
Repository = "https://github.com/sauremilk/agentbench-rw"
Issues = "https://github.com/sauremilk/agentbench-rw/issues"
Changelog = "https://github.com/sauremilk/agentbench-rw/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "hypothesis>=6.100",
]

[project.scripts]
agentbench = "agentbench.cli:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["agentbench"]

[tool.hatch.build.targets.sdist]
include = ["agentbench/", "tests/", "docs/", "scripts/", "README.md", "LICENSE", "pyproject.toml"]
